paul-apps/v4/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx1
  name: nginx1
spec:
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - image: registry.redhat.io/rhscl/httpd-24-rhel7
        name: nginx1
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: nginx-conf1
          subPath: index.html
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-index-html-v1cm
        name: nginx-conf1
