paul-apps/v4/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx1
  name: nginx1app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx1svc
